overflow image solved

--- a/Image Editor/style.css
+++ b/Image Editor/style.css
@@ -28,9 +28,13 @@ h2 {
 
 /* All Image */
 .image-container {
+    max-width: 490px;
+    max-height: 335px;
     width: auto;
     height: auto;
+    object-fit: contain;
 }
+
 img {
     padding: 50px;
     background-color: rgb(201, 201, 201);
@@ -44,10 +48,11 @@ img {
 .all-filter-container {
     padding: 20px;
     display: flex;
+    flex-grow: 1;
     justify-content: center;
     height: auto;
     width: auto;
-    overflow:auto;
+    overflow: hidden;
 }
 
 /* Filter Container */
@@ -57,6 +62,7 @@ img {
     border: 1px solid darkgray;
     margin-right: 2rem;
 }
+
 .disable {
     pointer-events: none;
     opacity: 0.3;
@@ -85,7 +91,7 @@ button {
     width: 8rem;
 }
 
-.filter-btn button:hover{
+.filter-btn button:hover {
     border: 1px solid #5372F0;
     background-color: #5372F0;
     cursor: pointer;
@@ -140,16 +146,18 @@ button {
 
 
 /* Bottom Buttons */
-.btns-container{
+.btns-container {
     display: flex;
     justify-content: space-between;
     padding: 10px 20px;
-    
+
 }
+
 .reset-btn button {
     text-transform: uppercase;
     font-size: 14px;
 }
+
 .reset-btn button:hover {
     background-color: #5372F0;
     color: white;
@@ -157,28 +165,30 @@ button {
     cursor: pointer;
 }
 
-.choose-save button:first-of-type{
-    margin: 0 4px; 
+.choose-save button:first-of-type {
+    margin: 0 4px;
     background-color: grey;
     color: white;
     border: 1px solid grey;
     text-transform: uppercase;
     font-size: 14px;
 }
+
 .choose-save button:first-of-type:hover {
     background-color: rgb(112, 112, 112);
     cursor: pointer;
     border: 1px solid rgb(112, 112, 112);
 }
 
-.choose-save button:last-of-type{
-    margin: 0 0 0 4px; 
+.choose-save button:last-of-type {
+    margin: 0 0 0 4px;
     background-color: #5372F0;
     color: white;
     border: 1px solid #5372F0;
     text-transform: uppercase;
     font-size: 14px;
 }
+
 .choose-save button:last-of-type:hover {
     background-color: #3158f5;
     border: 1px solid #3158f5;
